Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4306

Crash in QString::section() with QRegExp and SectionIncludeLeadingSep

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 4.7.1
    • 4.5.1
    • None
    • 7fc63dd0ff368a637dcd17e692b9d6b26278b538

    Description

      When using

      QString section ( const QRegExp &reg, int start, int end = -1,
      SectionFlags flags = SectionDefault ) const

      with QString::SectionIncludeLeadingSep as flags and accessing an
      element which is non-existing (e.g. start=1 and end=1, where the reg
      will result in only a single result), the method call will crash; see
      example code in the mail attached.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            goffart Olivier Goffart (closed Nokia identity) (Inactive)
            mgoetz Markus Goetz (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes