QString::section: Fix crash with SectionIncludeLeadingSep flag

And start is out of bounds.

Reviewed-by: Thiago
Reviewed-by: Joao
Task-number: QTBUG-4306